--- a/homework1/homework1.Rmd
+++ b/homework1/homework1.Rmd
@@ -2,7 +2,9 @@
 title: 'Homework #1'
 author: "Alice Ding"
 date: "2023-09-20"
-output: pdf_document
+output:
+  html_document:
+    df_print: paged
 ---
 
 ```{r imports, echo=FALSE, message=FALSE}
